<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tvUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvunits" />

        <EditText
            android:id="@+id/etUnits"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvLastBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvlastbill" />

        <DatePicker
            android:id="@+id/dpLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true" />

        <TextView
            android:id="@+id/tvCurBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvcurbill" />

        <DatePicker
            android:id="@+id/dpCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true" />

        <Button
            android:id="@+id/bCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/bcalculate" />

        <ImageView
            android:id="@+id/ivCEB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ivceb"
            android:src="@drawable/electricity" />

        <TextView
            android:id="@+id/tvNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/tvnotify" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvcurrency"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/tvbill"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>